--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,28 +9,33 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
+  name = "Experiences"
   url = "#posts"
   weight = 20
 
 [[main]]
+  name = "Research"
+  url = "#posts"
+  weight = 40
+
+[[main]]
   name = "Projects"
   url = "#projects"
-  weight = 30
+  weight = 60
 
 [[main]]
   name = "Publications"
   url = "#featured"
-  weight = 40
+  weight = 80
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 100
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[main]]
    name = "CV"
    url = "files/cv.pdf"
-   weight = 70
+   weight = 120
